force-app/main/default/objects/External_image__c/External_image__c.object-meta.xml
<CustomObject>
    <label>External image</label>
    <nameField>
        <displayFormat>IMG-{0000000}</displayFormat>
        <label>External image Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>