force-app/main/default/objects/External_image__c/fields/File_url__c.field-meta.xml
<CustomField>
    <fullName>File_url__c</fullName>
    <label>File url</label>
    <type>Url</type>
</CustomField>