force-app/main/default/objects/External_image__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(File_url__c,&apos;Image visualization&apos;)</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>