force-app/main/default/objects/External_image__c/fields/include_in_PDP__c.field-meta.xml
<CustomField>
    <fullName>include_in_PDP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>include in PDP</label>
    <type>Checkbox</type>
</CustomField>