force-app/main/default/objects/External_image__c/fields/Plot_Cell__c.field-meta.xml
<CustomField>
    <fullName>Plot_Cell__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plot Cell</label>
    <referenceTo>Explore_Plot_Cell__c</referenceTo>
    <relationshipLabel>External images</relationshipLabel>
    <relationshipName>External_images</relationshipName>
    <type>Lookup</type>
</CustomField>