force-app/main/default/objects/External_image__c/fields/Plot_Note__c.field-meta.xml
<CustomField>
    <fullName>Plot_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plot Note</label>
    <referenceTo>Plot_Saved_Soy__c</referenceTo>
    <relationshipLabel>External images</relationshipLabel>
    <relationshipName>External_images</relationshipName>
    <type>Lookup</type>
</CustomField>