force-app/main/default/objects/External_image__c/fields/SiteUser__c.field-meta.xml
<CustomField>
    <fullName>SiteUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SiteUser</label>
    <referenceTo>SiteUser__c</referenceTo>
    <relationshipLabel>External images</relationshipLabel>
    <relationshipName>External_images</relationshipName>
    <type>Lookup</type>
</CustomField>