force-app/main/default/objects/External_image__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variety</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>External images</relationshipLabel>
    <relationshipName>External_images</relationshipName>
    <type>Lookup</type>
</CustomField>